# architecture-assignments

project1_cachesim/Assignment1/Assignment_files/: Makefile  parse.h
project1_cachesim/Assignment1/solutions/: CMakeLists.txt
project1_cachesim/Assignment1/solutions/include/: Cache.h  FullAssocCache.h  GenCache.h  Parse.h  Simulator.h  cache.h  cache.hpp  simulator.h
project1_cachesim/Assignment1/solutions/report/: .gitignore
project1_cachesim/Assignment1/solutions/report/figures/fig1/: data.csv  fig1.py  size_assoc.sh
project1_cachesim/Assignment1/solutions/report/figures/fig2/: fig2.py  size_assoc.sh
project1_cachesim/Assignment1/solutions/report/figures/fig3/: data.csv  fig3.py  size_assoc.sh
project1_cachesim/Assignment1/solutions/report/figures/fig4/: data.csv  fig4.py  size_block.sh
project1_cachesim/Assignment1/solutions/report/figures/fig5/: data.csv  fig5.py  size_block.sh
project1_cachesim/Assignment1/solutions/report/figures/fig6/: data.csv  fig6.py  l1_l2_sizes.sh
project1_cachesim/Assignment1/solutions/report/figures/fig7/: data.csv  fig7.py  size_configs.sh
project1_cachesim/Assignment1/solutions/report/src/: dataset.tex  titlepage.tex
project1_cachesim/Assignment1/solutions/src/: Cache.cpp  FullAssocCache.cpp  GenCache.cpp  Simulator.cpp  cache.cpp  main.cpp
project2_branchpredictor/Assignment2/solutions/: CMakeLists.txt  valscript.sh
project2_branchpredictor/Assignment2/solutions/include/: branchpredictor.h  simulator.h
project2_branchpredictor/Assignment2/solutions/src/: branchpredictor.cpp  main.cpp  simulator.cpp
(+24 files in other folders)
